Modification dans les sections realisation et centre d'interets.

--- a/interets.tex
+++ b/interets.tex
@@ -1,3 +1,5 @@
 \section{Centres d'intérêts}
-\cvitem{Domotique}{Prototypage et installation avec des RaspberryPi}
-\cvitem{hobby 2}{Description}
+\cvitemwithcomment{ }{Domotique}{}
+\cvitemwithcomment{ }{ }{Prototypage et installation avec des RaspberryPi afin d'automatiser et de contrôler des appareils electiques.}
+\cvitemwithcomment{ }{Nouvelles technologies}{}
+\cvitemwithcomment{ }{ }{Les technologies informatiques avances très rapidement, c'est intéressant pour moi de me tenir au courant des innovations tant au niveau hardware que software.}
