Correction de faute et pret pour verificatioN

--- a/interets.tex
+++ b/interets.tex
@@ -1,5 +1,5 @@
 \section{Centres d'intérêts}
 \cvitemwithcomment{ }{Domotique}{}
-\cvitemwithcomment{ }{ }{Prototypage et installation avec des RaspberryPi afin d'automatiser et de contrôler des appareils electiques.}
+\cvitemwithcomment{ }{ }{Prototypage et installation avec des RaspberryPi afin d'automatiser et de contrôler des appareils électiques.}
 \cvitemwithcomment{ }{Nouvelles technologies}{}
-\cvitemwithcomment{ }{ }{Les technologies informatiques avances très rapidement, c'est intéressant pour moi de me tenir au courant des innovations tant au niveau hardware que software.}
+\cvitemwithcomment{ }{ }{Les technologies informatiques avances très rapidement, c'est intéressant pour moi de me tenir au courant des innovations tant le domaine du hardware que software.}
