--- a/realisations.tex
+++ b/realisations.tex
@@ -4,4 +4,4 @@
 \cvitemwithcomment{ }{EZBudget}{}
 \cvitemwithcomment{ }{ }{Cette application Web permet de faire un suivit de ses activités financières. L'application permet de catégoriser ses dépenses et ses entrés d'argents afin d'afficher des résumés graphiques. L'application est développer en Java pour le backend et en JQuerry pour le frontend. Le serveur web est créé avec Spring-Boot. La persitances des données est fait avec MySQL.}
 \cvitemwithcomment{ }{Path finding}{}
-\cvitemwithcomment{ }{ }{L'objectif de cette application était d'impélementer l'algorithme de Dijkstra en C++ en créant des structures de données efficaces et de se familiariser avec la STD.}
+\cvitemwithcomment{ }{ }{L'objectif de cette application était d'implémenter l'algorithme de Dijkstra en C++ en créant des structures de données efficaces et de se familiariser avec la STD.}
