--- a/connaissances.tex
+++ b/connaissances.tex
@@ -1,5 +1,5 @@
 \section{Connaissances Informatique}
-\cvitemwithcomment{Langages}{Java, Python, C\#, C++, C ;}{}
+\cvitemwithcomment{Langages}{Java, Python, C\#, C++, C , Haskell ;}{}
 \cvitemwithcomment{ }{HTML 5, JavaScript, JQuerry, AngularJS, NodeJS ;}{}
 \cvitemwithcomment{ }{CSS3, Bootstraps, \LaTeX.}{}
 \cvitemwithcomment{OS}{macOS, Linux, Windows.}{}
