Justification et mise en colonne des conniassances§

--- a/connaissances.tex
+++ b/connaissances.tex
@@ -1,11 +1,11 @@
 \section{Connaissances Informatique}
-\cvitemwithcomment{Langages}{Java, Python, C\#, C++, C , Haskell ;}{}
-\cvitemwithcomment{ }{HTML 5, JavaScript, JQuerry, AngularJS, NodeJS ;}{}
-\cvitemwithcomment{ }{CSS3, Bootstraps, \LaTeX.}{}
-\cvitemwithcomment{OS}{macOS, Linux, Windows.}{}
-\cvitemwithcomment{Database}{OracleSQL, MySQL, PostgreSQL.}{}
-\cvitemwithcomment{Logiciels}{Suite JetBrains, Eclipse, VIM, Git, BASH.}{}
-\cvitemwithcomment{Autres}{Programmation Agile ;}{}
-\cvitemwithcomment{ }{REST, Spring, Expression Regulière ;}{}
-\cvitemwithcomment{ }{Maven, Gradle ;}{}
-\cvitemwithcomment{ }{JSON, XML, UML.}{}
+\cvitemwithcomment{Langages}{\begin{tabu} to 0.86\textwidth{X[l]X[l]X[l]X[l]X[l]X[l]} Java, & Python, & C\#, & C++, & C, & Haskell ; \end{tabu}}{}
+\cvitemwithcomment{ }{\begin{tabu} to 0.86\textwidth{X[l]X[l]X[l]X[l]X[2l]} HTML 5, & JavaScript, & JQuerry, & AngularJS, & NodeJS ; \end{tabu}}{}
+\cvitemwithcomment{ }{\begin{tabu} to 0.86\textwidth{X[l]X[l]X[4l]} CSS3, & Bootstraps, & \LaTeX. \end{tabu}}{}
+\cvitemwithcomment{OS}{\begin{tabu} to 0.86\textwidth{X[l]X[l]X[4l]} macOS, & Linux, & Windows. \end{tabu}}{}
+\cvitemwithcomment{Database}{\begin{tabu} to 0.86\textwidth{X[l]X[l]X[4l]} OracleSQL, & MySQL, & PostgreSQL. \end{tabu}}{}
+\cvitemwithcomment{Logiciels}{\begin{tabu} to 0.86\textwidth{X[2l]X[l]X[l]X[l]X[l]} Suite JetBrains, & Eclipse, & VIM, & Git, & BASH. \end{tabu}}{}
+\cvitemwithcomment{Autres}{\begin{tabu} to 0.86\textwidth{X[6l]}Programmation Agile ; \end{tabu}}{}
+\cvitemwithcomment{ }{\begin{tabu} to 0.86\textwidth{X[l]X[l]X[4l]} REST, & Spring, & Expression Regulière ; \end{tabu}}{}
+\cvitemwithcomment{ }{\begin{tabu} to 0.86\textwidth{X[l]X[5l]} Maven, & Gradle ; \end{tabu}}{}
+\cvitemwithcomment{ }{\begin{tabu} to 0.86\textwidth{X[l]X[l]X[4l]} JSON, & XML, & UML. \end{tabu}}{}
