Reduction de l'espacement entre les lignes et ajout du paquet tabu

--- a/cv.tex
+++ b/cv.tex
@@ -6,7 +6,9 @@
 \usepackage[scale=0.8]{geometry}
 \usepackage{helvet}
 \usepackage[french]{babel}
-
+\usepackage{setspace}
+\linespread{1.35}
+\usepackage{tabu}
 \input{cvtitle.tex}
 
 \begin{document}
