Ajout de nouvelle section

--- a/cv.tex
+++ b/cv.tex
@@ -13,10 +13,11 @@
 
 \begin{document}
    \makecvtitle
+   \input{objectif.tex}
+   \input{competances.tex}
    \input{formation.tex}
    \input{experiences.tex}
    \input{connaissances.tex}
-   \newpage
    \input{activites.tex}
    \input{realisations.tex}
    \input{interets.tex}
