Prise en compte des commentaire et modification en conséquence

--- a/competances.tex
+++ b/competances.tex
@@ -1,22 +1,15 @@
 \section{Compétances}
-\cvdoubleitem{Gestion}{Gestion d'équipe}{ }{ }
-\cvdoubleitem{ }{ }{ }{ }
-\cvdoubleitem{ }{ }{ }{ }
-\cvdoubleitem{Finance}{ }{ }{ }
-\cvdoubleitem{ }{ }{ }{ }
-\cvdoubleitem{ }{ }{ }{ }
-\cvdoubleitem{Développement}{ }{ }{ }
-\cvdoubleitem{ }{ }{ }{ }
-\cvdoubleitem{ }{ }{ }{ }
-\cvdoubleitem{Modélisation}{ }{ }{ }
-\cvdoubleitem{ }{ }{ }{ }
-\cvdoubleitem{ }{ }{ }{ }
-\cvdoubleitem{Générales}{ }{ }{ }
-\cvdoubleitem{ }{ }{ }{ }
-\cvdoubleitem{ }{ }{ }{ }
-\cvdoubleitem{ }{ }{ }{ }
-\cvdoubleitem{ }{ }{ }{ }
-\cvdoubleitem{ }{ }{ }{ }
-\cvdoubleitem{ }{ }{ }{ }
-\cvdoubleitem{ }{ }{ }{ }
-\cvdoubleitem{ }{ }{ }{ }
+\cvdoubleitem{Générales}{Français langue maternelle;}{}{Sens des responsabilités;}
+\cvdoubleitem{ }{Anglais avancé;}{ }{Faculté d’adaptation;}
+\cvdoubleitem{ }{Travail d'équipe;}{ }{Service à la clientèle;}
+\cvdoubleitem{Gestion}{Gestion d'équipe;}{ }{Communication;}
+\cvdoubleitem{ }{Assurer le bon fonctionnement d'une organisation;}{ }{Résolution de conflit;}
+\cvdoubleitem{Finance}{Création de budget prévisionnel;}{ }{Exécution du cycle comptable;}
+\cvdoubleitem{ }{Paiement de créanciers;}{}{Enregistrement de transactions;}
+\cvdoubleitem{ }{Établir des états financier;}{}{Présentation d'états financier;}
+\cvdoubleitem{ }{Assurer la stabilité financière d'une organisation;}{}{}
+\cvdoubleitem{Développement}{Résolution de problèmes;}{ }{Modélisation UML;}
+\cvdoubleitem{logiciel}{Programmation orienté objet;}{ }{Programmation procédurale;}
+\cvdoubleitem{ }{Programmation fonctionnel;}{ }{Application Web REST;}
+\cvdoubleitem{ }{Création de documentation;}{ }{}
+\cvdoubleitem{ }{Création et maintenance des bases de données relationnelle;}{ }{}
