--- a/objectif.tex
+++ b/objectif.tex
@@ -1,2 +1,3 @@
 \section{Objectifs Professionnels}
-\cvitemwithcomment{ }{uaeohtnsueoahtntnheuaothnsueoa}{snthsnth}
+\cvitemwithcomment{ }{Appliquer les concepts appris lors de mon parcours académique afin de développer des}{}
+\cvitemwithcomment{ }{applications de qualité dans un contexte professionnel.}{}
