--- a/realisations.tex
+++ b/realisations.tex
@@ -1,7 +1,4 @@
 \section{Réalisations}
-\cvitemwithcomment{ }{FoodTruckLocator}{}
-\cvitemwithcomment{ }{ }{Cette application Web permet d'afficher les camions de rue de la ville de Montréal sur une carte selon les dates entrés. Cette application est développée en JQuerry et bootstrap pour le frontend et en Java pour le backend. Le serveur applicatif est créé avec le service Spring-Boot. Les données de localisation des camions de rue sont disponible grace à l'Opendata de la ville de Montréal. Les données sont enregistrées sur une base de données PostgreSQL local.}
-\cvitemwithcomment{ }{EZBudget}{}
-\cvitemwithcomment{ }{ }{Cette application Web permet de faire un suivit de ses activités financières. L'application permet de catégoriser ses dépenses et ses entrés d'argents afin d'afficher des résumés graphiques. L'application est développer en Java pour le backend et en JQuerry pour le frontend. Le serveur web est créé avec Spring-Boot. La persitances des données est fait avec MySQL.}
-\cvitemwithcomment{ }{Path finding}{}
-\cvitemwithcomment{ }{ }{L'objectif de cette application était d'implémenter l'algorithme de Dijkstra en C++ en créant des structures de données efficaces et de se familiariser avec la STD.}
+\cvitemwithcomment{FoodTruck Locator}{ }{Cette application Web permet d'afficher les camions de rue de la ville de Montréal sur une carte selon les dates entrés. Cette application est développée en JQuerry et bootstrap pour le frontend et en Java pour le backend. Le serveur applicatif est créé avec le service Spring-Boot. Les données de localisation des camions de rue sont disponible grace à l'Opendata de la ville de Montréal. Les données sont enregistrées sur une base de données PostgreSQL local.}
+\cvitemwithcomment{EZBudget}{ }{Cette application Web permet de faire un suivit de ses activités financières. L'application permet de catégoriser ses dépenses et ses entrés d'argents afin d'afficher des résumés graphiques. L'application est développer en Java pour le backend et en JQuerry pour le frontend. Le serveur web est créé avec Spring-Boot. La persitances des données est fait avec MySQL.}
+\cvitemwithcomment{Path finding}{ }{L'objectif de cette application était d'implémenter l'algorithme de Dijkstra en C++ en créant des structures de données efficaces et de se familiariser avec la STD.}
