--- a/activites.tex
+++ b/activites.tex
@@ -1,21 +1,4 @@
 \section{Activités Parascolaires}
-\cventry{2016--2017}{Président}{Association Générale des Étudiantes et Étudiants en Informatique}{UQAM}{}{%
-\begin{itemize}
-\item Gestion de l’équipe ;
-\item Assurer le bon fonctionnement de l'organisation.
-\end{itemize}}
-\cventry{2016--2017}{Trésorier}{Association Générale des Étudiantes et Étudiants en Informatique}{UQAM}{}{%
-\begin{itemize}
-\item Assurer la stabilité financière de l’organisation ;
-\item Construction et présentation des etats financier ;
-\item Enregistrement des transactions ;
-\item Paiement des créanciers.
-\end{itemize}}
-\cventry{Édition 2016}{VP-Finance}{CS GAMES - Comité Organisateur des Sciences Informatique}{UQAM}{}{%
-\begin{itemize}
-\item Assurer la stabilité financière de l’événement ;
-\item Paiement des créanciers ;
-\item Enregistrement des transactions ;
-\item Création des compétitions ;
-\item Préparation de l’événement.
-\end{itemize}}
+\cventry{2016--2017}{Président}{Association Générale des Étudiantes et Étudiants en Informatique}{UQAM}{}{}
+\cventry{2014--2016}{Trésorier}{Association Générale des Étudiantes et Étudiants en Informatique}{UQAM}{}{}
+\cventry{Édition 2016}{VP-Finance}{CS GAMES - Comité Organisateur des Sciences Informatique}{UQAM}{}{}
