Correction de faute de français.

--- a/cv.tex
+++ b/cv.tex
@@ -15,7 +15,7 @@
    \makecvtitle
    \input{objectif.tex}
    \input{formation.tex}
-   \input{competances.tex}
+   \input{competences.tex}
    \newpage
    \input{experiences.tex}
    \input{activites.tex}
