--- a/formation.tex
+++ b/formation.tex
@@ -1,5 +1,5 @@
 \section{Formation Académique}
 \cventry{2013--2016}{Université du Québec à Montréal}{Baccalauréat en Informatique et Génie Logiciel}{}{}{}%
 \cventry{2012--2013}{Université du Québec à Montréal}{Certificat en sciences comptables}{}{}{}%
-\cventry{2011--2012}{Université du Québec en Abitibi-Témiscamingue}{Certificat en sciences comptables}{}{}{}%
+\cventry{2011--2012}{Université du Québec en Abitibi-Témiscamingue}{Certificat en administration}{}{}{}%
 \cventry{2008--2011}{CÉGEP-Abitibi-Témiscamingue}{Techniques de Comptabilité et de Gestion}{}{}{}%
