--- a/competences.tex
+++ b/competences.tex
@@ -1,4 +1,4 @@
-\section{Compétances}
+\section{Compétences}
 \cvdoubleitem{Générales}{Français langue maternelle;}{}{Sens des responsabilités;}
 \cvdoubleitem{ }{Anglais avancé;}{ }{Faculté d’adaptation;}
 \cvdoubleitem{ }{Travail d'équipe;}{ }{Service à la clientèle;}
@@ -6,10 +6,9 @@
 \cvdoubleitem{ }{Assurer le bon fonctionnement d'une organisation;}{ }{Résolution de conflit;}
 \cvdoubleitem{Finance}{Création de budget prévisionnel;}{ }{Exécution du cycle comptable;}
 \cvdoubleitem{ }{Paiement de créanciers;}{}{Enregistrement de transactions;}
-\cvdoubleitem{ }{Établir des états financier;}{}{Présentation d'états financier;}
+\cvdoubleitem{ }{Établir des états financiers;}{}{Présentation d'états financiers;}
 \cvdoubleitem{ }{Assurer la stabilité financière d'une organisation;}{}{}
 \cvdoubleitem{Développement}{Résolution de problèmes;}{ }{Modélisation UML;}
-\cvdoubleitem{logiciel}{Programmation orienté objet;}{ }{Programmation procédurale;}
-\cvdoubleitem{ }{Programmation fonctionnel;}{ }{Application Web REST;}
-\cvdoubleitem{ }{Création de documentation;}{ }{}
-\cvdoubleitem{ }{Création et maintenance des bases de données relationnelle;}{ }{}
+\cvdoubleitem{logiciel}{Programmation orientée objet;}{ }{Programmation procédurale;}
+\cvdoubleitem{ }{Programmation fonctionnelle;}{ }{Application Web REST;}
+\cvdoubleitem{ }{Création et maintenance des bases de données relationnelles;}{ }{Création de documentation;}
