--- a/interets.tex
+++ b/interets.tex
@@ -1,3 +1,3 @@
 \section{Centres d'intérêts}
-\cvitemwithcomment{Domotique}{ }{Prototypage et installation avec des RaspberryPi afin d'automatiser et de contrôler des appareils électiques.}
+\cvitemwithcomment{Domotique}{ }{Prototypage et installation avec des RaspberryPi afin d'automatiser et de contrôler des appareils électriques.}
 \cvitemwithcomment{Nouvelles technologies}{ }{Les technologies informatiques avances très rapidement, c'est intéressant pour moi de me tenir au courant des innovations tant le domaine du hardware que software.}
