Creation de la version 2 de mon cv

--- a/cv/activites.tex
+++ b/cv/activites.tex
@@ -1,4 +1,4 @@
-\section{Activités Parascolaires}
+\section{Implication Sociales}
 \cventry{2016--2017}{Président}{Association Générale des Étudiantes et Étudiants en Informatique}{UQAM}{}{}
 \cventry{2014--2016}{Trésorier}{Association Générale des Étudiantes et Étudiants en Informatique}{UQAM}{}{}
 \cventry{Édition 2016}{VP-Finance}{CS GAMES - Comité Organisateur des Sciences Informatique}{UQAM}{}{}
