--- a/cv/connaissances.tex
+++ b/cv/connaissances.tex
@@ -1,6 +1,6 @@
 \section{Connaissances Informatique}
 \cvitemwithcomment{Langages}{\begin{tabu} to 0.8\textwidth{X[l]X[l]X[l]X[l]X[l]X[l]} Java, & Python, & C\#, & C++, & C, & Haskell ; \end{tabu}}{}
-\cvitemwithcomment{ }{\begin{tabu} to 0.8\textwidth{X[l]X[l]X[l]X[l]X[2l]} HTML 5, & JavaScript, & JQuerry, & AngularJS, & NodeJS ; \end{tabu}}{}
+\cvitemwithcomment{ }{\begin{tabu} to 0.8\textwidth{X[l]X[l]X[l]X[l]X[2l]} HTML 5, & JavaScript, & JQuery, & AngularJS, & NodeJS ; \end{tabu}}{}
 \cvitemwithcomment{ }{\begin{tabu} to 0.8\textwidth{X[l]X[l]X[4l]} CSS3, & Bootstraps, & \LaTeX. \end{tabu}}{}
 \cvitemwithcomment{OS}{\begin{tabu} to 0.8\textwidth{X[l]X[l]X[4l]} macOS, & Linux, & Windows. \end{tabu}}{}
 \cvitemwithcomment{Database}{\begin{tabu} to 0.8\textwidth{X[l]X[l]X[4l]} OracleSQL, & MySQL, & PostgreSQL. \end{tabu}}{}
