--- a/lettre de presentation/conclu_spontanée.tex
+++ b/lettre de presentation/conclu_spontanée.tex
@@ -1,8 +1,8 @@
 \vfill
 Avec les compétences et les expériences qui sont présentées sur mon curriculum
-vitae, je crois être un candidat idéal pour le poste \Poste au sein de votre
-entreprise. Je vous présente donc ma candidature pour ce poste. En entrevue, je
-pourrais vous parler davantage de mes motivations pour le poste.
+vitae, je crois être un candidat ajout intéressant au sein de votre
+entreprise. Je vous présente donc ma candidature. En entrevue, je
+pourrais vous parler davantage de mes motivations.
 \vfill
 Merci de l'attention que vous portez à ma demande.
 \vfill
