--- a/lettre de presentation/corps.tex
+++ b/lettre de presentation/corps.tex
@@ -1,20 +1,22 @@
 \vfill
-Lors de mon parcours académique, j'ai récolté des compétences tant en
+Lors de mon parcours académique, j'ai récolté des facultés tant en
 programmation qu'en gestion d'entreprise. Mes compétences
 multidisciplinaires pourraient être un ajout bénéfiques à votre entreprise. Mon
-ambition m'a mené à siéger sur le conseil d'exécutif de l'Association
+ambition m'a mené à siéger sur le conseil exécutif de l'Association
 Générale des Étudiantes et Étudiants en Informatique de l'UQAM et sur le
-comité organisateur des CS Games de l'édition 2016.
-Ces expériences m'ont permis de pratiquer mes connaissances
+comité organisateur des CS Games de l'édition 2016. De plus, lors de mes stages,
+j'ai participé à la création et la sélection des technologies à utiliser, pour
+mettre en place des techniques d'automatisation.
+Ces postes m'ont permis de pratiquer mes connaissances
 dans des situations réelles.
 \vfill
 Pour se rapprocher du poste auquel je postule, pendant mes études,
-j'ai pu mettre en pratique par le biais de
-plusieurs travaux d'équipe plusieurs notions de programmation. Avec ma
+j'ai pu mettre en pratique par le biais des travaux d'équipe plusieurs notions
+de programmation. Avec ma
 facilité à apprendre, le poste que vous proposez me donnerais la possibilité
-d'apprendre de nouvelles technologies et d'être efficace rapidement. Durant
+d'assimiler de nouvelles technologies et d'être efficace rapidement. Durant
 mon parcours académique j'ai assisté à plusieurs cours. Parmis ceux-ci, les
 notions du cours de Développement de logiciel dans un environnement Agile où
 nous avons appris cette méthodologie de développement et tous les outils qui s'y
-attachent et les notions du cours de conception où nous avons apris plusieurs
-patrons de dévellopement sont les cours qui m'ont le plus intéressés.
+attachent et les notions du cours de conception où nous avons appris plusieurs
+patrons de développement sont les cours qui m'ont le plus intéressés.
