--- a/lettre de presentation/entete.tex
+++ b/lettre de presentation/entete.tex
@@ -1,25 +1,21 @@
 \sffamily
-%
-\begin{tabularx}{\linewidth}{XX}
-\begin{flushleft}
-{\bfseries Marc-André Allard}\\[.35ex]
-\small\itshape
-4634 Avenue Dupuis apt. 2\\
-Montréal, Québec H3W 1N3\\[.35ex]
-(438) 888-1807\\
-m.a.allard10@gmail.com
-\end{flushleft}
-&
-\begin{flushright}
-{\bfseries \Entreprise}\\[.35ex]
-\small\itshape
-\EntrepriseAdresse\\
-\EntrepriseVille
-\end{flushright}
-%
-\begin{flushright}
 À Montréal, le \today \\
-\end{flushright}
+\begin{tabularx}{\linewidth}{XX}
+  \begin{flushleft}
+    {\bfseries \Entreprise}\\[.35ex]
+    %\small\itshape
+    %\EntrepriseAdresse\\
+    %\EntrepriseVille
+  \end{flushleft}
+  &
+  \begin{flushright}
+    {\bfseries Marc-André Allard}\\[.35ex]
+    \small\itshape
+    4634 Avenue Dupuis apt. 2\\
+    Montréal, Québec H3W 1N3\\[.35ex]
+    (438) 888-1807\\
+    m.a.allard10@gmail.com
+  \end{flushright}
 \end{tabularx}
-\begin{center} \textbf{Référence du poste} : \Poste\end{center}
+\begin{center} \textbf{Référence du poste} : \Objet\end{center}
 Madame, Monsieur,
