--- a/lettre de presentation/intro_spontanée.tex
+++ b/lettre de presentation/intro_spontanée.tex
@@ -1,9 +1,8 @@
 \vfill
-En analysant les poste disponible sur le site \BDemploi, je suis arrivé sur
-votre affichage qui me semble très intéressant. Une expérience de travail
-avec l'équipe de développement
+Lorsque je cherchais des entreprises dans laquelle j'aimerai y faire carrière, \Entreprise, me semble être un milieu très intéressant.
+Une expérience de travail avec l'équipe de développement
 de \Entreprise représente à mes yeux une opportunité qui permettrait de
 parfaire mes compétences et d'y apporter une nouvelle énergie.
 Lors de mon parcours académique et de mes expériences antérieures, j'ai acquis
 plusieurs aptitudes que vous recherchez chez un employé.
-C'est pour ces raisons, que le poste \Poste m'intéresse.
+C'est pour ces raisons, que je vous fais parvenir ma candidature.
