--- a/lettre de presentation/tbm.tex
+++ b/lettre de presentation/tbm.tex
@@ -1,5 +1,6 @@
-\newcommand{\Poste}{Analyste Programmeur }
-\newcommand{\Entreprise}{Telus Santé }
-\newcommand{\EntrepriseAdresse}{123 rue Savard}
-\newcommand{\EntrepriseVille}{Montréal, Québec H5T 1P2}
-\newcommand{\BDemploi}{Jobboom}
+\newcommand{\Objet}{Developpeur Junior}
+\newcommand{\Poste}{de Developpeur Junior  }
+\newcommand{\Entreprise}{SweetIQ }
+\newcommand{\EntrepriseAdresse}{  }
+\newcommand{\EntrepriseVille}{Montréal }
+\newcommand{\BDemploi}{Indeed.com}
