--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -2,7 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[francais]{babel}
 
-\usepackage[top=1.1cm, bottom=1.1cm, left=1.8cm, right=1.8cm]{geometry}
+\usepackage[top=1.1cm, bottom=1.1cm, left=1.5cm, right=1.5cm]{geometry}
 
 
 \moderncvtheme[orange]{classic}
@@ -14,14 +14,15 @@
 \mobile {(438) 888-1807}
 \homepage {mcaead10.github.io}
 \social[github]{mcaead10}
-\title{A modifier à chaque fois}
+\title{Développeur logiciel junior}
+\extrainfo{Bilingue: français et anglais}
 
 \begin{document}
    \makecvtitle
    \section{Formations}
-   \cventry{2013--2016}{UQÀM}{Baccalauréat en Informatique et Génie Logiciel}{}{}{}
-   \cventry{2012--2013}{UQÀM}{Certificat en Sciences Comptables}{}{}{}
-   \cventry{2008--2011}{CÉGEP-AT}{Techniques de Comptabilité et de Gestion}{}{}{}
+   \cventry{2013--2016}{Université du Québec à Montréal}{Baccalauréat en Informatique et Génie Logiciel}{}{}{}
+   \cventry{2012--2013}{Université du Québec à Montréal}{Certificat en Sciences Comptables}{}{}{}
+   \cventry{2008--2011}{CÉGEP de l'Abitibi-Témiscamingue}{Techniques de Comptabilité et de Gestion}{}{}{}
    \section{Experiences Professionnelles}
    \cventry{Septembre 2015 \\ à Août 2016}{Stagiaire en Informatique}{Morneau Shepell}{Montréal}{}{Développement et création de l'architecture d'un interface de programmation en C\# pour l'application Ranorex, pour permettre à l'équipe d'assurance qualité de créer l'automatisation de leurs scénarios de test.}
    \section{Réalisations}
@@ -40,6 +41,7 @@
    \cventry{2016--2017}{Président}{Association Générale des Étudiantes et Étudiants en Informatique}{UQÀM}{}{}
    \cventry{2014--2016}{Trésorier}{Association Générale des Étudiantes et Étudiants en Informatique}{UQÀM}{}{}
    \cventry{Édition 2016}{VP-Finance}{CS GAMES - Comité Organisateur des Sciences Informatique}{UQÀM}{}{}
+   \cventry{Édition 2017}{Bénévole}{CS GAMES}{ÉTS}{}{}
    \section{Centres d'intérêts}
    \cvitem{Domotique}{Prototypage et installation avec des RaspberryPi afin d'automatiser et de contrôler des appareils électriques.}
 \end{document}
