Ajout du ficiher .pdf de mon cv

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -14,7 +14,7 @@
 \mobile {(438) 888-1807}
 \homepage {mcaead10.github.io}
 \social[github]{mcaead10}
-\title{Développeur logiciel junior}
+\title{Développeur logiciel}
 \extrainfo{Bilingue: français et anglais}
 
 \begin{document}
@@ -24,24 +24,23 @@
    \cventry{2012--2013}{Université du Québec à Montréal}{Certificat en Sciences Comptables}{}{}{}
    \cventry{2008--2011}{CÉGEP de l'Abitibi-Témiscamingue}{Techniques de Comptabilité et de Gestion}{}{}{}
    \section{Experiences Professionnelles}
-   \cventry{Septembre 2015 \\ à Août 2016}{Stagiaire en Informatique}{Morneau Shepell}{Montréal}{}{Développement et création de l'architecture d'un interface de programmation en C\# pour l'application Ranorex, pour permettre à l'équipe d'assurance qualité de créer l'automatisation de leurs scénarios de test.}
+   \cventry{Septembre 2015 \\ à Août 2016}{Stagiaire en Informatique}{Morneau Shepell}{Montréal}{}{Développement et création de l'architecture d'une interface de programmation en C\# pour l'application Ranorex, pour permettre à l'équipe d’assurance qualité d'automatiser leurs scénarios de test.}
    \section{Réalisations}
-   \cventry{Application Web}{FoodTurck Locator}{Java, PostgreSQL, JQuery, Bootstrap, Spring Boot}{}{}{Cette application permet l'affichage des camions restaurents de la ville de Montréal sur une carte OpenStreetMap avec la bibliothèque Leaflet. Les données de localisation des camions restaurents sont récoltées grâce à l'Opendata de la ville de Montréal.}
-   \cventry{Application Web}{EZBudget}{Java, MySQL, AngularJS, Bootstrap, SpringBoot}{}{}{Cette application permet à plusieurs utilisateurs de faire un suivi de ses activités financières presonnelles. L'application permet de catégoriser ses dépenses et ses entrés d'argent afin d'afficher des résumés graphiques.}
-   \cventry{Ligne de commande}{Path Finding}{C++, STD}{}{}{Cette application implémente l'algorithme de Dijkstra. Les objets graph et coordonnées géographique ont été créés avec la STD.}
+   \cventry{Application Web}{FoodTruck Locator}{Java, PostgreSQL, JQuery, Bootstrap, Spring Boot}{}{}{Permet l'affichage des camions restaurants de la ville de Montréal sur une carte OpenStreetMap avec la bibliothèque Leaflet. Les données de localisation des camions restaurants sont récoltées grâce au Portail de Données Ouvertes de la ville de Montréal.}
+   \cventry{Application Web}{EZBudget}{Java, MySQL, AngularJS, Bootstrap, SpringBoot}{}{}{Permet à plusieurs utilisateurs de suivre leurs activités financières personnelles. L'application aide à comptabiliser ses dépenses et ses entrées d'argent puis affiche un somaire accompagné de graphiques.}
+   \cventry{Ligne de commande}{Path Finding}{C++}{}{}{Réalisée dans le cadre d'un cours de structures de données. Implémente l’algorithme de Dijkstra. Les objets, graphes et coordonnées géographiques ont été créés avec la librairie standard C++.}
    \section{Compétences en Informatique}
    \cvitem{Langages}{Java, Python, C\#, C++, C, Haskell}
-   \cvitem{Langages web}{HTML5, CSS3, JavaScript, Jquery}
-   \cvitem{Langages autres}{Bash, Latex}
+   \cvitem{Technologies web}{HTML5, CSS3, JavaScript, Jquery}
    \cvitem{Bases de données}{MySQL, PostgreSQL, Oracle}
    \cvitem{Systèmes}{Linux (Ubuntu, Mint, Debian), Mac OS, Windows}
    \cvitem{Logiciels}{Suite JetBrains, Eclipse, Git, VIM, Visual Studio}
-   \cvitem{Autres}{Programmation Agile, GoF, GRASP, UML, REST, Spring, Expression Régulière, Maven, Gradle, JSON, XML}
+   \cvitem{Autres}{Développement Agile, GoF, GRASP, UML, REST, Spring, Expression régulière, Bash, Maven, Gradle, JSON, XML}
    \section{Implications Sociales}
    \cventry{2016--2017}{Président}{Association Générale des Étudiantes et Étudiants en Informatique}{UQÀM}{}{}
    \cventry{2014--2016}{Trésorier}{Association Générale des Étudiantes et Étudiants en Informatique}{UQÀM}{}{}
-   \cventry{Édition 2016}{VP-Finance}{CS GAMES - Comité Organisateur des Sciences Informatique}{UQÀM}{}{}
-   \cventry{Édition 2017}{Bénévole}{CS GAMES}{ÉTS}{}{}
+   \cventry{2016}{VP-Finance}{CS GAMES - Comité Organisateur des Sciences Informatique}{UQÀM}{}{}
+   \cventry{2017}{Bénévole}{CS GAMES}{ÉTS}{}{}
    \section{Centres d'intérêts}
-   \cvitem{Domotique}{Prototypage et installation avec des RaspberryPi afin d'automatiser et de contrôler des appareils électriques.}
+   \cvitem{Domotique}{Prototypage et installation avec des Raspberry Pi afin d'automatiser et de contrôler des appareils électriques.}
 \end{document}
